@@ -31,6 +31,9 @@ TBD
   PAC support - #30
 - Added setup.py to install Px using pip - #24
 - Fixed bug where Px crashes on Windows startup - #31
+- Fixed issue of no debug output - #36
+- Ensure logs are generated where Px is instead of working directory and flushed
+  immediately, quit should log in separate file and not overwrite MainProcess
 
 v0.3.0 - 2018-02-19
 - Fixed issue 9 - Added support for winkerberos to workaround pywin32 bug
